# proj_9date

./: CMakeLists.txt  Eclipse IDE for Java Developers - 2023-12.lnk  GitHub Desktop.lnk  Postman.lnk  ReadMe.txt  Visual Studio Code.lnk  WPS Office.lnk  WPS PDF.lnk
.github/workflows/: ci.yml
Testproj_01/: CMakeLists.txt  Testproj_01.sln  Testproj_01.vcxproj  Testproj_01.vcxproj.filters
Testproj_01/inc/mylib/: simp_calc.h
Testproj_01/src/: main.cpp  simp_calc.cpp
Testproj_01/tests/: add_test01.cpp
code/: armstrong.txt  digit.txt  pattern.txt  subarr.txt
cppApps/add/: add.cpp  add.sln  add.vcxproj  add.vcxproj.filters
cppApps/add1/: add1.cpp  add1.sln  add1.vcxproj  add1.vcxproj.filters  fun.cpp
cppApps/argc/: argc - Shortcut.lnk  argc.cpp  argc.sln  argc.vcxproj  argc.vcxproj.filters
cppApps/base/: base.cpp  base.sln  base.vcxproj  base.vcxproj.filters
cppApps/calc/: calc.sln  calc.vcxproj  calc.vcxproj.filters
cppApps/cap/: cap.cpp  cap.sln  cap.vcxproj  cap.vcxproj.filters
cppApps/cppProj01/: cppProj01.cpp  cppProj01.sln  cppProj01.vcxproj  cppProj01.vcxproj.filters
cppApps/day01/: day01.sln
cppApps/funpointer/: funpointer.sln  funpointer.vcxproj  funpointer.vcxproj.filters
cppApps/goto/: goto.sln  goto.vcxproj
cppApps/p1/: p1.cpp  p1.sln  p1.vcxproj
jira_simpcalc/: jira_simpcalc.sln  jira_simpcalc.vcxproj  jira_simpcalc.vcxproj.filters
proj01/: file1.cpp  p3.cpp  p3.ii  p3.s
src/: main.cpp
testp1/: CMakeLists.txt  calc.cpp  main.cpp  testp1.sln  testp1.vcxproj  testp1.vcxproj.filters
tests/: test_add01.cpp
training/: arth.cpp
(+69 files in other folders)
